--- a/Section 02/index.html
+++ b/Section 02/index.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>uHost</title>
     <link rel="shortcut icon" href="favicon.png">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
-        <section style="background: #ff1b68;">
+        <section>
             <h1>Get the freedom you deserve.</h1>
+        </section>
+        <section>
+            <h1>Choose Your Plan</h1>
         </section>
     </main>
 </body>
