--- a/Section 02/index.html
+++ b/Section 02/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,6 +19,7 @@
         </section>
         <section id="plans">
             <h1 class="section-title">Choose Your Plan</h1>
+            <p>Make sure you get the most for your money!</p>
         </section>
     </main>
 </body>
