--- a/Section 03/index.html
+++ b/Section 03/index.html
@@ -26,9 +26,8 @@
                 </li>
                 <li class="main-nav__item">
                     <a href="customers/index.html">Customers</a>
-                    <a href="customers/index.html">Customers</a>
                 </li>
-                <li class="main-nav__item">
+                <li class="main-nav__item main-nav__item--cta">
                     <a href="start-hosting/index.html">Start Hosting</a>
                 </li>
             </ul>
