--- a/Section 05/packages/index.html
+++ b/Section 05/packages/index.html
@@ -22,7 +22,7 @@
         <nav class="main-nav">
             <ul class="main-nav__items">
                 <li class="main-nav__item">
-                    <a href="../index.html">Packages</a>
+                    <a href="index.html">Packages</a>
                 </li>
                 <li class="main-nav__item">
                     <a href="../customers/index.html">Customers</a>
@@ -34,7 +34,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="package">
             <a href="#">
                 <h1>Our PLUS Plan</h1>
                 <h2>The most popular choice of our customers.</h2>
@@ -42,14 +42,14 @@
                     are always available!</p>
             </a>
         </section>
-        <section>
+        <section class="package">
             <a href="#">
                 <h1>Our FREE Plan</h1>
                 <h2>An extremely solid start into our hosting world.</h2>
                 <p>Get started immediately at zero cost!</p>
             </a>
         </section>
-        <section>
+        <section class="package">
             <a href="#">
                 <h1>Our PREMIUM Plan</h1>
                 <h2>All your enterprise needs. Instant support, guaranteed uptime. </h2>
