--- a/Section 06/packages/index.html
+++ b/Section 06/packages/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="packages.css">
 </head>
 <body>
+    <div class="background-image"></div>
     <header class="main-header">
         <div>
             <a href="../index.html" class="main-header__brand">
